--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,7 @@ body
     font-size: 16px;
     margin: 0;
     padding: 0;
+    background-color: black;
 }
 
 .cabecera
@@ -16,9 +17,16 @@ body
     font-weight: bold;
     margin: 2px;
     padding: 0.5em;
+    display: flex;
+    align-items: center;   
     
-}
 
+}
+#logo{
+    width: 40px;
+    height: 40px;
+    margin-right: 5px;
+}
 .cabecera .tagline
 {
     padding: 0 0 0 1em;
@@ -28,7 +36,9 @@ body
 
 .container
 {
+    background-color: white;
     width: 70%;
+    height: 100%;
     padding: 0;
     text-align: left;
     border: 1px solid #DDD;
