--- a/css/estilos.css
+++ b/css/estilos.css
@@ -54,7 +54,7 @@ body
     padding: 1em;
 }
 .footer{
-    background-color: gray;
+    background-color: #33A;
     color: white;
     text-align: center;
 }
